--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,16 @@
 RewriteEngine On
+
 # Allow access to the file-manager folder and its subfolders
 RewriteCond %{REQUEST_URI} ^/file-manager/ [NC]
 RewriteRule .* - [L]
 
-# Allow access to assets folder
+# Allow access to the assets folder
 RewriteRule ^assets($|/) - [L]
 
-# Ignore certain file extensions
+# Ignore certain file extensions and redirect to index.php for others
 RewriteCond %{REQUEST_URI} !(\.png|\.webp|\.jpg|\.ico|\.gif|\.jpeg|\.zip|\.css|\.svg|\.js|\.woff2|\.woff|\.ttf|\.eot|\.map|\.xml|\.txt|\.mp4|\.mp3)$
 RewriteRule ^(.*)$ index.php [QSA,L]
+
+# Set the correct MIME types for font files
+AddType font/woff2 .woff2
+AddType font/woff .woff
