--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php-imap/php-imap": "^5.0",
         "google/apiclient": "^2.18",
         "thenetworg/oauth2-azure": "^2.2",
-        "firebase/php-jwt": "^6.10"
+        "firebase/php-jwt": "^6.10",
+        "facebook/graph-sdk": "^5.1"
     },
     "autoload": {
         "psr-4": {
